--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=CoBackend
+spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=update
+
 spring.application.name=backend
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
