--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=CoBackend
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.application.name=backend
 spring.h2.console.enabled=true
