Ajout d'un Endpoint REST /login + Installation et configuration de JWT pour la gestion des tokens

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.application.name=backend
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+jwt.secret=xgUsNA1chAZ+N/8MXPuWh3KJA2OCKRqTz+jxq2FuwkM=
+jwt.expiration=86400000
