--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,16 @@
     		<artifactId>h2</artifactId>
     		<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+    		<groupId>org.projectlombok</groupId>
+    		<artifactId>lombok</artifactId>
+    		<version>1.18.36</version>
+    		<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
+	
 
 	<build>
 		<plugins>
@@ -63,6 +72,23 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+            	<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-compiler-plugin</artifactId>
+            	<version>3.8.1</version>
+            	<configuration>
+                	<source>17</source>
+                	<target>17</target>
+                	<annotationProcessorPaths>
+                		<path>
+                       		<groupId>org.projectlombok</groupId>
+                        	<artifactId>lombok</artifactId>
+                        	<version>1.18.30</version>
+                    	</path>
+                	</annotationProcessorPaths>
+            	</configuration>
+        	</plugin>
 		</plugins>
 	</build>
 
