feat/Sécurisation et validité du Token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 jwt.secret=xgUsNA1chAZ+N/8MXPuWh3KJA2OCKRqTz+jxq2FuwkM=
-jwt.expiration=86400000
+jwt.expiration= 180000
